--- a/unsupervised.ipynb
+++ b/unsupervised.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Unsupervised learning on sleep_classifiers output data\n",
-    "This Jupyter Notebook assumes that you have already run Dr. Olivia Walch's <a href=\"https://github.com/ojwalch/sleep_classifiers\">sleep_classifiers</a> preprocessor script, <a href=\"https://github.com/ojwalch/sleep_classifiers/tree/master/source/preprocessing">preprocessing_runner.py</a>, and that the acceleration data is stored in <code>\<jupyter_notebook_root>/motion</code>. Change the path in the second box below, otherwise; the data does have to exist within the Jupyter Lab path, though.\n",
+    "This Jupyter Notebook assumes that you have already run Dr. Olivia Walch's <a href=\"https://github.com/ojwalch/sleep_classifiers\">sleep_classifiers</a> preprocessor script, <a href=\"https://github.com/ojwalch/sleep_classifiers/tree/master/source/preprocessing\">preprocessing_runner.py</a>, and that the acceleration data is stored in <code><jupyter_notebook_root>/motion</code>. Change the path in the second box below, otherwise; the data does have to exist within the Jupyter Lab path, though.\n",
     "    \n",
     "Please see also:  \n",
     "__Walch, O.__ (2019). _Motion and heart rate from a wrist-worn wearable and labeled sleep from polysomnography (version 1.0.0)_. PhysioNet. https://doi.org/10.13026/hmhs-py35  \n",
